# events-face

./: .gitignore  pyproject.toml
src/: db.sqlite3  urls.py
src/authentication/: serializer.py  urls.py  views.py
src/core/: asgi.py  settings.py  wsgi.py
src/events/: admin.py  models.py  serializer.py  urls.py  views.py
src/events/migrations/: 0001_initial.py  0002_alter_events_id_alter_places_id.py  0003_alter_events_id_alter_events_place_alter_places_id.py  0004_alter_events_id_alter_events_place_alter_places_id.py  0005_alter_events_id_alter_events_place_alter_places_id.py  0006_alter_events_id_alter_places_id.py
src/sync/: admin.py  models.py
src/sync/management/commands/: sync.py
src/sync/migrations/: 0001_initial.py  0002_alter_eventssync_sync_date.py
